Fixed the alignment in landing Page

--- a/static/styles.css
+++ b/static/styles.css
@@ -13,5 +13,5 @@ body {
   list-style-type: none;
 }
 .blognopost {
-  margin-left: 35%;
+  margin-left: 39%;
 }
